exercise1_10/service.yaml
# A ClusterIP type Service resource gives the Service an 
# internal IP that'll be accessible in the cluster.

# Works on layer 4 (transport, TCP)

apiVersion: v1
kind: Service
metadata:
  name: read-write-service
spec:
  type: ClusterIP
  selector:
    app: read-write-pod # This is the app as declared in the deployment.
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
