exercise1_10/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: read-write-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: read-write-service # this is the name of the service in service.yaml
          servicePort: 2345
